# ReaperOS

./: .env.example  .gitignore  CLAUDE.md  Dashboard.md  GEMINI.md  GEMINI_ANTIGRAVITY.md  HANDOFF_2026-05-27.md  README.md  REAPER_MEMORY.md  pyproject.toml  trinity-down.sh  trinity-start.sh
50_Architecture/: ADR-001-Pydantic-Validation.md  ADR-002-SLI-Telemetry.md  ADR-003-Supervisor-Delegation.md  ADR-004-Automated-System-Cleanup.md
conductor/: STANDARDS.md  SUMMARY.md  advanced-roadmap.md  frontier-y-rfc.md  reaper-stability-plan.md  stress_task_tree.json  task_tree.json  tracks.md  trinity-migration.md
dashboard/: app.js  index.html  style.css
docs/: CONSTITUTION.md  POLICY.md  PROJECT.md
engine/: actor.py  checkpoints.py  config.py  curriculum.py  daemon.py  doctor.py  fsm.py  gateway.py  guard.py  health.py  llm.py  main.py  mcp_client.py  mcp_server.py  memory.py  rag_engine.py  reaper.py  router.py  scaffold.py  scheduler.py  swarm.py  vk_nexus.py  web_dashboard.py  zero_rpc.py
scratch/: logistic_report.json
tests/: stress_test.py  test_aci_cli.py  test_actor.py  test_checkpoints.py  test_curriculum.py  test_doctor.py  test_fsm.py  test_gateway.py  test_healing_agent.py  test_judge.py  test_log_tailer.py  test_mementos.py  test_memory_brain.py  test_pipeline_output.py  test_rag_engine.py  test_router.py  test_sandbox.py  test_scaffold.py  test_scheduler.py  test_skill_creator.py  test_skill_registry.py  test_swarm.py  test_telemetry_logger.py  test_vk_nexus.py  test_web_dashboard.py  test_zero_rpc.py
tools/: aci_cli.py  com.reaper.watchdog.plist  (+23 more)
(+23 files in other folders)
